# nsbi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  code_style.yaml  pr_checks.yaml  unittests.yaml
docs/source/: conf.py  index.rst  modules.rst  nsbi.rst  stemu.rst
nsbi/: __init__.py
